--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body>
-	<section class="logo">
+	<figure class="logo">
 		&lt;epam&gt;
-	</section>
+	</figure>
 	<h1>Our global locations</h1>
 	<main>
 		<article>
-			<section class="block block1">
+			<wrapper class="block block1">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -24,8 +24,8 @@
 						</tr>
 					</table><span class="country">Armenia</span>
 				</div><img alt="Armenia" src="images/Armenia.jpg">
-			</section>
-			<section class="block block2">
+			</wrapper>
+			<wrapper class="block block2">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -36,8 +36,8 @@
 						</tr>
 					</table><span class="country">Austria</span>
 				</div><img alt="Austria" src="images/Austria.jpg">
-			</section>
-			<section class="block block3">
+			</wrapper>
+			<wrapper class="block block3">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -48,8 +48,8 @@
 						</tr>
 					</table><span class="country">Belarus</span>
 				</div><img alt="Belarus" src="images/Belarus.jpg">
-			</section>
-			<section class="block block4">
+			</wrapper>
+			<wrapper class="block block4">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -60,8 +60,8 @@
 						</tr>
 					</table><span class="country">Budapest</span>
 				</div><img alt="Budapest" src="images/Budapest.jpg">
-			</section>
-			<section class="block block5">
+			</wrapper>
+			<wrapper class="block block5">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -72,8 +72,8 @@
 						</tr>
 					</table><span class="country">Bulgaria</span>
 				</div><img alt="Bulgaria" src="images/Bulgaria.jpg">
-			</section>
-			<section class="block block6">
+			</wrapper>
+			<wrapper class="block block6">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -84,8 +84,8 @@
 						</tr>
 					</table><span class="country">Canada</span>
 				</div><img alt="Canada" src="images/Canada.jpg">
-			</section>
-			<section class="block block7">
+			</wrapper>
+			<wrapper class="block block7">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -96,8 +96,8 @@
 						</tr>
 					</table><span class="country">China</span>
 				</div><img alt="China" src="images/China.jpg">
-			</section>
-			<section class="block block8">
+			</wrapper>
+			<wrapper class="block block8">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -108,8 +108,8 @@
 						</tr>
 					</table><span class="country">Czhech Republic</span>
 				</div><img alt="Czech" src="images/Czech.jpg">
-			</section>
-			<section class="block block9">
+			</wrapper>
+			<wrapper class="block block9">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -120,8 +120,8 @@
 						</tr>
 					</table><span class="country">Germany</span>
 				</div><img alt="Germany" src="images/Germany.jpg">
-			</section>
-			<section class="block block10">
+			</wrapper>
+			<wrapper class="block block10">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -132,8 +132,8 @@
 						</tr>
 					</table><span class="country">Hong Kong</span>
 				</div><img alt="Hong Kong" src="images/Hong_Kong.jpg">
-			</section>
-			<section class="block block11">
+			</wrapper>
+			<wrapper class="block block11">
 				<a href="#expanded" style="display:block">
 				<div class="overlay" id="first">
 					<table class="country">
@@ -145,8 +145,8 @@
 						</tr>
 					</table><span class="country">Ireland</span>
 				</div><img alt="Ireland" src="images/Ireland.jpg"></a>
-			</section>
-			<section class="block block12">
+			</wrapper>
+			<wrapper class="block block12">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -157,7 +157,7 @@
 						</tr>
 					</table><span class="country">Singapore</span>
 				</div><img alt="Singapore" src="images/Singapore.jpg">
-			</section>
+			</wrapper>
 			<div id="expanded">
 				<span class="arrow_box"></span>
 				<table class="description">
@@ -196,7 +196,7 @@
 					</tr>
 				</table>
 			</div>
-			<section class="block block13">
+			<wrapper class="block block13">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -207,8 +207,8 @@
 						</tr>
 					</table><span class="country">Switzerland</span>
 				</div><img alt="Switzerland" src="images/Switzerland.jpg">
-			</section>
-			<section class="block block14">
+			</wrapper>
+			<wrapper class="block block14">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -219,8 +219,8 @@
 						</tr>
 					</table><span class="country">Unite Kingdom</span>
 				</div><img alt="UK" src="images/UK.jpg">
-			</section>
-			<section class="block block15">
+			</wrapper>
+			<wrapper class="block block15">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -231,8 +231,8 @@
 						</tr>
 					</table><span class="country">Ukraine</span>
 				</div><img alt="Ukraine" src="images/Ukraine.jpg">
-			</section>
-			<section class="block block16">
+			</wrapper>
+			<wrapper class="block block16">
 				<div class="overlay">
 					<table class="country">
 						<tr>
@@ -243,7 +243,7 @@
 						</tr>
 					</table><span class="country">United States</span>
 				</div><img alt="United States" src="images/United_States.jpg">
-			</section>
+			</wrapper>
 		</article>
 	</main>
 </body>
